finishes all pending tasks;